[package]
edition.workspace = true
name = "longbridge-c"
version.workspace = true
description = "Longbridge OpenAPI SDK for C"
homepage = "https://open.longbridge.com/en/"
readme = "README.md"
repository = "https://github.com/longbridge/openapi"
license = "MIT OR Apache-2.0"
keywords = ["longbridge", "openapi", "sdk"]
categories = ["api-bindings"]

[lib]
crate-type = ["cdylib"]

[dependencies]
longbridge.workspace = true
longbridge-c-macros = { path = "crates/macros" }

rust_decimal = { workspace = true, features = ["maths"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
parking_lot.workspace = true
time.workspace = true
tracing.workspace = true

[build-dependencies]
cbindgen.workspace = true
