[package]
name = "longbridge-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
longbridge.workspace = true

poem-mcpserver = { workspace = true, features = ["streamable-http"] }
poem = { workspace = true, features = ["sse"] }
serde = { workspace = true, features = ["derive"] }
schemars = { workspace = true, features = ["rust_decimal1"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
clap = { workspace = true, features = ["derive"] }
dotenvy.workspace = true
time = { workspace = true, features = ["formatting", "parsing"] }
tracing-subscriber.workspace = true
serde_json.workspace = true
tracing-appender.workspace = true
tracing.workspace = true
