[package]
edition.workspace = true
name = "longport-nodejs"
version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
longport.workspace = true
longport-nodejs-macros = { path = "crates/macros" }

napi = { workspace = true, features = [
    "napi4",
    "tokio_rt",
    "chrono_date",
    "async",
    "serde-json",
] }
napi-derive.workspace = true
rust_decimal = { workspace = true, features = ["maths"] }
chrono.workspace = true
time = { workspace = true, features = ["macros", "formatting"] }
tokio = { workspace = true, features = ["rt", "time"] }
parking_lot.workspace = true
serde_json.workspace = true

[build-dependencies]
napi-build.workspace = true
