[package]
edition.workspace = true
name = "longbridge-python"
version.workspace = true
description = "Longbridge OpenAPI SDK for Python"
homepage = "https://open.longbridge.com/en/"
readme = "README.md"
repository = "https://github.com/longbridge/openapi"
license = "MIT OR Apache-2.0"
keywords = ["longbridge", "openapi", "sdk"]
categories = ["api-bindings"]

[lib]
name = "longbridge"
crate-type = ["cdylib"]

[dependencies]
longbridge = { workspace = true, features = ["blocking"] }
longbridge-python-macros = { path = "crates/macros" }
pyo3-async-runtimes = { workspace = true }

parking_lot.workspace = true
pyo3 = { workspace = true, features = [
    "extension-module",
    "experimental-async",
] }
pythonize.workspace = true
rust_decimal.workspace = true
serde_json.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "sync"] }

[build-dependencies]
pyo3-build-config.workspace = true
