[project]
name = "longbridge"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
description = "A Python library for Longbridge Open API"
readme = "README.md"
repository = "https://github.com/longbridge/openapi"
requires-python = ">=3.8"
dependencies = []

[license]
text = "MIT OR Apache-2.0"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project.urls]
homepage = "https://open.longbridge.com/en/"
documentation = "https://open.longbridge.com/en/docs"
repository = "https://github.com/longbridge/openapi"
changelog = "https://github.com/longbridge/openapi/blob/master/python/CHANGELOG.md"

[tool.maturin]
python-source = "pysrc"
