[package]
name = "longbridge-java-macros"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
Inflector.workspace = true
darling.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["parsing"] }
thiserror.workspace = true
