[package]
edition.workspace = true
name = "longbridge-candlesticks"
version.workspace = true
description = "Longbridge candlestick utils for Rust"
license = "MIT OR Apache-2.0"

[dependencies]
bitflags.workspace = true
rust_decimal.workspace = true
time = { workspace = true, features = ["macros"] }
time-tz.workspace = true
num-traits.workspace = true
